testing site update on installed app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <link rel="manifest" href="/test-pwa/manifest.json">
+
+    <style>
+        h1 {
+            color: brown;
+        }
+    </style>
 </head>
 <body>
     <h1>Homepage</h1>
