change bg color for testing purposes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
         h1 {
-            background-color: bisque;
+            background-color: thistle;
             color: brown;
         }
     </style>
