--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         h1 {
             background-color: thistle;
-            color: brown;
+            color: darkmagenta;
         }
     </style>
 </head>
