trying caching strat with version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,30 +14,80 @@
         main {
             padding: 2.5rem;
         }
+
         h1 {
             background-color: thistle;
             color: cornflowerblue;
         }
     </style>
 </head>
+
 <body>
     <main>
         <h1>Homepage</h1>
+        <p id="ver-p">app version: --</p>
         <p><a href="./page1.html">page 1</a></p>
     </main>
 
     <script>
         if ('serviceWorker' in navigator) {
-          window.addEventListener('load', () => {
-            navigator.serviceWorker.register('sw.js')
-              .then(registration => {
-                console.log('Service Worker registered:', registration);
-              })
-              .catch(error => {
-                console.error('Service Worker registration failed:', error);
-              });
-          });
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('sw.js')
+                    .then(registration => {
+                        console.log('Service Worker registered:', registration);
+                    })
+                    .catch(error => {
+                        console.error('Service Worker registration failed:', error);
+                    });
+            });
         }
-      </script>
+
+        const APP_VERSION = '5.0';  // match your manifest.json
+        document.getElementById('ver-p').innerText = `app version: ${APP_VERSION}`;
+
+        async function checkForUpdate() {
+            try {
+                // always fetch fresh manifest
+                const res = await fetch('/test-pwa/manifest.json', { cache: 'no-store' });
+                if (!res.ok) throw new Error('Manifest fetch failed');
+                const { version } = await res.json();
+                if (version !== APP_VERSION) {
+                    promptUserToRefresh();
+                }
+            } catch (err) {
+                console.warn('Version check failed:', err);
+            }
+        }
+
+        function promptUserToRefresh() {
+            // simple banner at top of body
+            const banner = document.createElement('div');
+            banner.style = `
+      position: fixed; top: 0; left: 0; right: 0;
+      background: #333; color: #fff; padding: 1em; text-align: center;
+      font-family: sans-serif; z-index: 10000;
+    `;
+            banner.innerHTML = `
+      A new version is available.
+      <button id="reload-btn" style="margin-left:1em; padding:.5em 1em;">
+        Reload
+      </button>
+    `;
+            document.body.appendChild(banner);
+            document.getElementById('reload-btn').onclick = () => {
+                // Tell SW to activate new version immediately:
+                if (navigator.serviceWorker?.controller) {
+                    navigator.serviceWorker.controller.postMessage({ type: 'SKIP_WAITING' });
+                }
+                // then reload
+                window.location.reload(true);
+            };
+        }
+
+        window.addEventListener('load', () => {
+            checkForUpdate();
+        });
+    </script>
 </body>
+
 </html>
