testing caching strat with version 2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         #ver-p {
             color: chocolate;
+            background-color: blanchedalmond;
             font-weight: 600;
         }
     </style>
@@ -45,7 +46,7 @@
             });
         }
 
-        const APP_VERSION = '5.1';  // match your manifest.json
+        const APP_VERSION = '5.2';  // match your manifest.json
         document.getElementById('ver-p').innerText = `app version: ${APP_VERSION}`;
 
         async function checkForUpdate() {
