--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             padding: 2.5rem;
         }
         h1 {
-            background-color: thistle;
-            color: cornflowerblue;
+            background-color: cadetblue;
+            color: darkslategrey;
+            font-weight: bold;
         }
         #ver-p {
             color: chocolate;
@@ -46,7 +47,7 @@
             });
         }
 
-        const APP_VERSION = '5.2';  // match your manifest.json
+        const APP_VERSION = '5.3';  // match your manifest.json
         document.getElementById('ver-p').innerText = `app version: ${APP_VERSION}`;
 
         async function checkForUpdate() {
