--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             background-color: blanchedalmond;
             font-weight: 600;
         }
+        button {
+            color: azure;
+        }
     </style>
 </head>
 
@@ -36,7 +39,7 @@
         <h1>Homepage</h1>
         <p id="info-p">At this point the installed app on android is updated when connected to pc to remotely debug with dev tools. Now let's do the same but un-connected with dev tools.</p>
         <p id="ver-p">app version: --</p>
-        <p><a href="./page1.html">page 1</a></p>
+        <button onclick="document.location='./page1.html'">page 1</button>
     </main>
 
     <script>
@@ -52,7 +55,7 @@
             });
         }
 
-        const APP_VERSION = '5.5';  // match your manifest.json
+        const APP_VERSION = '5.6';  // match your manifest.json
         document.getElementById('ver-p').innerText = `app version: ${APP_VERSION}`;
 
         async function checkForUpdate() {
